app/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background-color: #1E1F20; /* Prevent nav flash. */
}

:root {
  --heading-font-family: 'Archivo', sans-serif;
  --body-font-family: 'Archivo', sans-serif;
  --fluid-fluid-min-width: 480;
  --fluid-fluid-max-width: 1250;
  --fluid-fluid-screen: 100vw;
  --fluid-fluid-bp: calc(
    (var(--fluid-fluid-screen) - var(--fluid-fluid-min-width) / 16 * 1rem) /
      (var(--fluid-fluid-max-width) - var(--fluid-fluid-min-width))
  );

  @media screen and (min-width: 1250px) {
    --fluid-fluid-screen: calc(var(--fluid-fluid-max-width) * 1px);
  }

  /* Fluid type size variables. */
  --fluid-fs-h1-super: typeScale(48, 96);
  --fluid-fs-h1: typeScale(48, 64);
  --fluid-fs-h2-super: typeScale(64, 86);
  --fluid-fs-h2: typeScale(36, 48);
  --fluid-fs-h3: typeScale(24, 36);
  --fluid-fs-h4: typeScale(20, 24);
  --fluid-fs-h5: calcRem(18);
  --fluid-fs-h6: calcRem(14);

  /**
  Color vars.
  */
  --color-panther: #3E4041;
  --color-yosemite: #49A0C4;
  --color-citrus: #92D67A;
  --color-amethyst: #C0AED8;
  --color-salsa: #CC5242;
  --color-marble: #F0EBD9;
  --color-peachy: #F3A985;
  --color-yellow: #FFDE42;
  --color-cream: #EBE8DE;
  --color-charcoal: #1E1F20;
  --color-black: #000000;
  --color-white: #FFFFFF;

  /**
  Colors that change.
  */
  --color-text-on-light: var(--color-charcoal);
  --color-bg-light: var(--color-cream);
  --color-text-on-dark: var(--color-cream);
  --color-bg-dark: var(--color-charcoal);
}

@layer base {
  * {
    --container-padding: clamp(16px, 3.84vw, 48px);
  }

  .container-w-padding {
    width: 100%;
    padding: 0 var(--container-padding);
  }

  .site-grid {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(11, minmax(0, 1fr));
    gap: clamp(12px, 1.667vw, 24px);
  }

  .site-grid-gap {
    gap: clamp(12px, 1.667vw, 24px);
  }

  body {
    font-family: var(--body-font-family);
    font-size: 1rem;
    line-height: 1.2;
    font-weight: 350;
  }

  .h1-super,
  h1,
  .h1,
  h2,
  .h2,
  .h2-super,
  h3,
  .h3,
  h4,
  .h4,
  h5,
  .h5,
  h6,
  .h6 {
    font-family: var(--heading-font-family);
    margin: unset;
    margin-bottom: var(--fluid-headline-mb-default);
    font-size: var(--fluid-headline-fs);
    line-height: var(--fluid-headline-lh, 1.1);
    font-variation-settings: 'wght' var(--fluid-headline-fw, 400), 'wdth' var(--fluid-headline-wdth, 110);
  }

  .h1-super {
    --fluid-headline-fs: var(--fluid-fs-h1-super);
    --fluid-headline-lh: 1.2;
    --fluid-headline-fw: 800;
  }

  h1,
  .h1 {
    --fluid-headline-fs: var(--fluid-fs-h1);
    --fluid-headline-lh: 1.1;
    --fluid-headline-fw: 700;
  }

  .h2-super {
    --fluid-headline-fs: var(--fluid-fs-h2-super);
    --fluid-headline-lh: 1.2;
    --fluid-headline-fw: 800;
  }

  h2,
  .h2 {
    --fluid-headline-fs: var(--fluid-fs-h2);
    --fluid-headline-lh: 1.2;
    --fluid-headline-fw: 500;
  }

  h3,
  .h3 {
    --fluid-headline-fs: var(--fluid-fs-h3);
    --fluid-headline-lh: 1.2;
    --fluid-headline-fw: 500;
  }

  h4,
  .h4 {
    --fluid-headline-fs: var(--fluid-fs-h4);
  }

  h5,
  .h5 {
    --fluid-headline-fs: var(--fluid-fs-h5);
  }

  h6,
  .h6 {
    --fluid-headline-fs: var(--fluid-fs-h6);
  }

  .text-on-light {
    color: var(--color-text-on-light);
  }

  .bg-light {
    background-color: var(--color-bg-light);
  }

  .text-on-dark {
    color: var(--color-text-on-dark);
  }

  .bg-dark {
    background-color: var(--color-bg-dark);
  }

  .highlight {
    color: var(--highlight-color);
  }

  .highlight > span {
    padding: 0.2em 0.25em 0.1em;
    background: var(--highlight-bg); 
    box-decoration-break: clone;
  }

  .highlight--amethyst {
    --highlight-bg: var(--color-amethyst);
    --highlight-color: var(--color-charcoal);
  }

  .highlight--citrus {
    --highlight-bg: var(--color-citrus);
    --highlight-color: var(--color-charcoal);
  }

  /**
  Hover effect highlight.
  - action is meant for accordions, or data states
  */
  .highlight-hover > span,
  .highlight-hover-action > span {
    box-decoration-break: clone;
    padding: 0.5em 0.5em;
    line-height: 2;
    background: transparent;
    transition: all 0.3s ease-in-out, color 0.1s ease-in;
  }

  .overlay-link:hover ~ * .highlight-hover > span,
  .overlay-link:focus-visible ~ * .highlight-hover > span,
  .highlight-hover:hover > span,
  .highlight-hover:focus-visible > span,
  .highlight-hover-action[data-state='open'] > span {
    background: var(--highlight-bg);
    color: var(--highlight-color);
  }

  .highlight-hover--citrus {
    --highlight-bg: var(--color-citrus);
    --highlight-color: var(--color-charcoal);
  }

  /**
  General text styles.
  */
  .body-20,
  p {
    font-family: var(--body-font-family);
    font-size: typeScale(16, 20);
    font-variation-settings: 'wght' 450, 'wdth' 105;
    letter-spacing: 0.2px;
    line-height: 1.4;
  }

  .info-16 {
    font-family: var(--body-font-family);
    font-size: calcRem(16);
    font-style: normal;
    font-variation-settings: 'wght' 450, 'wdth' 105;
    line-height: 1.25;
    letter-spacing: 0.16px;
  }

  .mobile-nav-link {
    font-family: var(--body-font-family);
    font-size: calcRem(52);
    font-variation-settings: 'wght' 450, 'wdth' 105;
    line-height: 1.2;
    letter-spacing: 0.52px;
  }

  .mobile-nav-sub-link {
    font-family: var(--body-font-family);
    font-size: calcRem(20);
    line-height: 1.2;
    letter-spacing: 0.52px;
    font-variation-settings: 'wght' 500, 'wdth' 105;
  }

  .mobile-nav-accordion svg,
  .mobile-nav-cta svg {
    height: calcRem(44);
    width: calcRem(44);
    max-width: 60px;
    max-height: 60px;
  }

  .primary-nav-link {
    font-family: var(--body-font-family);
    font-size: calcRem(20);
    font-style: normal;
    font-variation-settings: 'wght' 500, 'wdth' 105;
    line-height: 1.8;
    letter-spacing: 0.2px;
  }

  .primary-nav-sub-link {
    font-family: var(--body-font-family);
    font-size: typeScale(16, 20);
    font-variation-settings: 'wght' 450, 'wdth' 105;
    letter-spacing: 0.2px;
    line-height: 1.4;
  }

  .btn-text {
    font-family: var(--body-font-family);
    font-size: typeScale(16, 20);
    font-style: normal;
    font-variation-settings: 'wght' 500, 'wdth' 105;
    line-height: 1.4;
    letter-spacing: 0.2px;
  }

  .btn-text-sm {
    font-size: calcRem(16);
    font-family: var(--body-font-family);
    font-style: normal;
    font-variation-settings: 'wght' 500, 'wdth' 105;
    line-height: 1.4;
    letter-spacing: 0.2px;
  }

  /* Input styles. */
  .default-input {
    appearance: none;
    -webkit-appearance: none;
    background: transparent;
    border: 2px solid var(--color-cream);
    min-height: 48px;
    font-variation-settings: 'wght' 500, 'wdth' 110;
    font-size: typeScale(16, 20);
    padding: 0.2em 1em;
    width: 100%;
  }

  @media (min-width: 768px) {
    .default-input {
      min-height: 60px;
    }
  }

  .default-input::placeholder {
    color: var(--color-cream);
    opacity: 0.5;
  }
}

